<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">BWL News</string>
    <string name="splash">Splash</string>
    <string name="login">Login</string>
    <string name="welocemsg">Welcome to Bridewater Labs</string>
    <string name="onboardingtext">We present you an app to help you with tehnical onboarding</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_an_account">Create new account</string>
    <string name="new_password">New password</string>
    <string name="done">Done!</string>
    <string name="please_enter_your_email_address_to_reset_your_password">Please enter your email address to reset your password.</string>
    <string name="arrow_back_button">arrow_back_button</string>
    <string name="send">Send</string>
    <string name="reset_password">Reset password</string>
    <string name="change">Change</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="usericon">userIcon</string>
    <string name="upload_photo">Upload photo</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register">Register</string>
    <string name="you_successfully_created_your_account">You successfully created your account.</string>
    <string name="logo">logo</string>
    <string name="continue_to_app">Continue to App</string>
    <string name="please_full_this_form_to_create_new_account">Please full this form to create new account.</string>
    <string name="i_agree_withterms_and_conditions_an_privacy_policy">I agree with %1$s and %2$s </string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="emloyees">Emloyees</string>
    <string name="notififations">Notififations</string>
    <string name="procedures">Procedures</string>
    <string name="bwl_news">BWL News</string>
    <string name="action_button">action_button</string>
    <string name="profile">Profile</string>
    <string name="favorites">Favorites</string>
    <string name="privacy_settings">Privacy settings</string>
    <string name="language">Language</string>
    <string name="notification_settings">Notification settings</string>
    <string name="logout">Logout</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="slide_menu">Slide menu</string>
    <string name="browse_through_all_bwl_company_news">Browse through all BWL company news.</string>
    <string name="search_news">Search news</string>
    <string name="news">News</string>
    <string name="user_picture">User picture</string>
    <string name="heart_colored">Heart colored</string>
    <string name="privacy_settings_icon">Privacy settings icon</string>
    <string name="language_icon">Language icon</string>
    <string name="notification_icon_colored">Notification icon colored</string>
    <string name="blog_image">Blog image</string>
    <string name="ellipse">Ellipse</string>
    <string name="title">Title</string>
    <string name="some_text">Some text...</string>
    <string name="show_more">Show more</string>
    <string name="invalid_username_or_password">Invalid username or password.</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="check_internet_connection">Please check your internet connection</string>

</resources>
