<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewmodel"
            type="com.bridgewaterlabs.news.ui.onboarding.resetpassword.ResetPasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="28dp">

        <ImageView
            android:id="@+id/ivBack"
            android:contentDescription="@string/arrow_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:src="@drawable/ic_arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="57dp"
            android:text="@string/forgot_password"
            android:textColor="#555555"
            android:textSize="33sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:text="@string/please_enter_your_email_address_to_reset_your_password"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/etNewPassword"
            android:autofillHints="password"
            android:text="@={viewmodel.email}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:background="@drawable/email_stroke"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingTop="9dp"
            android:paddingBottom="9dp" />

        <EditText
            android:layout_width="match_parent"
            android:autofillHints="password"
            android:text="@={viewmodel.password}"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:background="@drawable/email_stroke"
            android:hint="@string/reset_password"
            android:inputType="textPassword"
            android:paddingTop="9dp"
            android:paddingBottom="9dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnResetPassword"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="15dp"
                android:baselineAligned="true"
                android:enabled='@{!viewmodel.email.equals("") &amp;&amp; !viewmodel.password.equals("")}'
                android:stateListAnimator="@null"
                android:text="@string/change" />
        </LinearLayout>

    </LinearLayout>

</layout>
