<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.bridgewaterlabs.news.ui.onboarding.register.RegisterViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="28dp">


            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:contentDescription="@string/arrow_back_button"
                android:src="@drawable/ic_arrow" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="20dp"
                android:text="@string/register"
                android:textSize="33sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:text="@string/please_full_this_form_to_create_new_account"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:autofillHints=""
                android:hint="@string/first_name"
                android:inputType="text"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/hint_color"
                app:hintTextColor="?attr/colorHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@={viewmodel.firstName}" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:autofillHints=""
                android:hint="@string/last_name"
                android:inputType="text"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/hint_color"
                app:hintTextColor="?attr/colorHint"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@={viewmodel.lastName}" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:autofillHints=""
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/hint_color"
                app:hintTextColor="?attr/colorHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@={viewmodel.email}" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:autofillHints=""
                android:hint="@string/password"
                android:inputType="textPassword"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/hint_color"
                app:hintTextColor="@color/hint_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@={viewmodel.password}" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:autofillHints=""
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/hint_color"
                app:hintTextColor="@color/hint_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@={viewmodel.confirmPassword}" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                style="@style/Button.Ghost"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/usericon"
                    android:src="@drawable/ic_user_with_background" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/upload_photo"
                    android:textColor="@color/bwl"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="0dp"
                android:paddingEnd="20dp">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={viewmodel.isChecked}" />

                <TextView
                    android:id="@+id/privacyPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="16sp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnRegisterPassword"
                    style="@style/Button.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="15dp"
                    android:baselineAligned="true"
                    android:enabled="@{viewmodel.button}"
                    android:stateListAnimator="@null"
                    android:text="@string/register" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</layout>